<resources>
    <string name="app_name">PMDDMM_P3_Javier_Rodriguez_Montero</string>
    <string name="item1">Enesimo numero primo</string>
    <string name="item2">Dia y noche</string>
    <string name="item3">Conversor</string>
    <string name="item4">WebView</string>
    <string name="item5">Map</string>

    <string name="textView">Calculadora Numeros Primos</string>
    <string name="editText2">Introduce qué número primo quieres calcular. Por ejemplo, si deseas saber el sexto número primo pon el número 6 en la caja de texto y dale a calcular. Te dirá que el sexto número primo es el 13.</string>
    <string name="txt_1"> </string>
    <string name="button_e">Calcular</string>
    <string name="txt_2">Resultado</string>

    <string name="IB">Imagenes</string>
    <string name="txt"></string>

    <string name="txt_Titulo">Conversor</string>
    <string name="intro_txtNumb">Introduce un valor</string>
    <string name="txt_indicacion1">Pasar de:</string>
    <string name="hexadecimal_RadioButton1">Hexadecimal</string>
    <string name="binario_RadioButton2">Binario</string>
    <string name="decimal_RadioButton3">Decimal</string>
    <string name="txt_indicacion2">A:</string>
    <string name="hexadecimal_RadioButton4">Hexadecimal</string>
    <string name="binario_RadioButton5">Binario</string>
    <string name="decimal_RadioButton6">Decimal</string>
    <string name="result_txtView">Resultado</string>
    <string name="conversor_button">Convertir</string>

    <string name="editText_WebView">Buscar pagina web</string>
    <string name="button_WebView">Buscar</string>
    <string name="button_WebView2">Cerrar</string>

</resources>
