<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityConversor">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/intro_txtNumb"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_Titulo"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radioButtonH4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hexadecimal_RadioButton4" />

        <RadioButton
            android:id="@+id/radioButtonB5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/binario_RadioButton5" />

        <RadioButton
            android:id="@+id/radioButtonD6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decimal_RadioButton6" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2">

        <TextView
            android:id="@+id/textV1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result_txtView"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="conversor"
        android:text="@string/conversor_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5"
        app:layout_constraintVertical_bias="0.211" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1">

        <RadioButton
            android:id="@+id/radioButtonH1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hexadecimal_RadioButton1" />

        <RadioButton
            android:id="@+id/radioButtonB2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/binario_RadioButton2" />

        <RadioButton
            android:id="@+id/radioButtonD3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decimal_RadioButton3" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_indicacion1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_indicacion2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>